discussion/kv_engine/182186/182186_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54386: Allow for configuring a pool of "free" connections

Allow the administrator to configure a "pool" of connection objects
we want to try to keep available. If the number of connections
exceeds this number we'll try to shut down the least recently
used idle connection (which isn't an internal connection)

If the incoming rate of new connections is higher than we're
able to disconnect the least recently used connections we'll
end up hitting the hard limit where the new connection gets
dropped immediately.

Blocking the dispatcher thread adds a bunch of new problems:
   1) The clock tick is also bound to this thread
   2) Reconfigure of network interface would hang
   3) Shutdown is also driven from this thread

We could "disable" the listen callback and enable it again
once we're getting below a threshold. (it would be to remove
it from the libevent callback, and then add it back again. It
does however seem a bit "complex"). The previous problem was
that they ran out od connections which stayed in that situation
for a "long" time. In this case if you for instance had a
pool of 1k "free" connections you would have a rate of connect
attempts which would eat up all of the 1k while we where
trying to shut down the connections (every time we accept
a connection we would initiate shutdown of a connection, but
shutdown could potentially take a little time (the code tried
to pick idle connections so they shouldn't be blocked, but would
need to wait for the worker thread to pick up that connection)

@todo Add unit test
@todo should we prioritize a given bucket

Change-Id: Ic5d72a4468ba3db7cbbcf70da62d3d036a167d04

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-11-08 07:10:58.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-08 07:31:47.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42772/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/thread.cc:176:21:
error: use of undeclared identifier "lru"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42772/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21713/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:176:21: error: use of undeclared identifier "lru" [clang-diagnostic-error]
                    lru.head, num_to_close + accept_connections.size());
                    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21713/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:176:21:
error: use of undeclared identifier "lru" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21713/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50962/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/thread.cc(176): error C2065: "lru": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50962/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11439/ : FAILURE

Compile error at [2022-11-08T07:15:44.280Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/thread.cc:176:21:
error: use of undeclared identifier "lru"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11439/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/460/ : FAILURE

Compile error at [2022-11-08T07:19:19.500Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/thread.cc:176:21:
error: ?lru? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/460/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23193/ : FAILURE

Compile error at [2022-11-08T07:31:31.109Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/thread.cc:176:21:
error: use of undeclared identifier "lru"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23193/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23755/ : FAILURE

Compile error at [2022-11-08T07:16:05.697Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/thread.cc:176:21:
error: ?lru? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23755/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24164/ : FAILURE

Compile error at [2022-11-08T07:25:22.862Z] ../kv_engine/daemon/thread.cc:176:21:
error: ?lru? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24164/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24991/ : FAILURE

Compile error at [2022-11-08T07:19:13.371Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/thread.cc:176:21:
error: use of undeclared identifier "lru"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24991/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11530/ : FAILURE

Compile error at [2022-11-08T07:20:03.838Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/thread.cc:176:21:
error: ?lru? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11530/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32176/ : FAILURE

Compile error at [2022-11-08T07:23:28.931Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/thread.cc:176:21:
error: use of undeclared identifier "lru"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32176/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20993/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
